@@ -1,3 +1,6 @@
+[B]Version 6.4.2 - 2024-05-06[/B]
+- Fix not unfolding my-list
+
 [B]Version 6.4.1 - 2024-03-29[/B]
 - Fix live channels not working from EU
 
